--- a/Monkey Pox Detection.ipynb
+++ b/Monkey Pox Detection.ipynb
@@ -34,22 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(224, 224, 3)"
+       "(800, 1200, 3)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image = cv2.imread(\"./Monkey_Pox_Data/train/Monkey_Pox/M01_02_09.jpg\")\n",
+    "image = cv2.imread(\"./Monkey_Pox_Data/train/Monkey_Pox/M01_01_09.jpg\")\n",
     "image.shape"
    ]
   },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -199,13 +199,13 @@
        "(1, 200, 200, 3)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "monkey_pox = load_img(\"./Monkey_Pox_Data/test/Monkey_Pox/M06_02.jpg\", target_size=(200, 200))\n",
+    "monkey_pox = load_img(\"./Skin_Cancer_Test.jpg\", target_size=(200, 200))\n",
     "\n",
     "monkey_pox = img_to_array(monkey_pox)\n",
     "\n",
@@ -218,23 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 38ms/step\n"
+      "1/1 [==============================] - 0s 273ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.3229559]], dtype=float32)"
+       "array([[0.0526654]], dtype=float32)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
